# qiushi2pdf

./: .gitignore  README.md  crawler.py  gen_pdf.py  qiushi.cls  setup.cfg  template.tex
src/: test.py
src/qiushi2pdf/: __init__.py  crawler.py  entry.py  gen_pdf.py
src/qiushi2pdf/resource/: qiushi.cls  template.tex
