[metadata]
name = qiushi2pdf
version = attr: qiushi2pdf.__version__
author = StableGenius
author_email = feng@dongfa.pro
description = convert 《求是》 article into pdf file
long_description = file: README.md
long_description_content_type = text/markdown
keywords = qiushi, qstheory
license = GNU General Public License v3.0
url = https://github.com/fengdongfa1995/qiushi2pdf
project_urls =
    Bug Tracker = https://github.com/fengdongfa1995/qiushi2pdf/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Education
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: Chinese (Simplified)
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Topic :: Text Processing :: Markup :: LaTeX

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires = 
    requests
    qrcode
    lxml

[options.package_data]
qiushi2pdf = resource/*.*

[options.entry_points]
console_scripts =
    qiushi2pdf = qiushi2pdf.entry:main

[options.packages.find]
where = src